# ScopeTimer

./: CMakeLists.txt  main.cpp
