cmake_minimum_required(VERSION 3.1.0)

project(sandbox)
if( WIN32 )
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /openmp")
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /openmp")
endif()
set(CMAKE_INCLUDE_CURRENT_DIR ON)
find_package(OPENMP REQUIRED)
file(GLOB SRC "*.h" "*.hpp" "*.cpp" "*.ui")
add_executable(sandbox ${SRC})